# FLP-Rusty-Model

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  rusty_model.rs
tests/: rusty_model.rs
